[package]
name = "pdfextend"
version = "0.1.0"
edition = "2021"
description = "Command line application to extend PDF documents to provide additional space for annotation"
authors = ["Dorian Rudolph <mail@dorianrudolph.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
indicatif = "0.17.2"
pdfium-render = "0.7.11"

[profile.release]
lto = true
