[package]
name = "pdfextend"
version = "0.1.0"
edition = "2021"
description = "Command line application to extend PDF documents to provide additional space for annotation"
authors = ["Dorian Rudolph <mail@dorianrudolph.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
pdfextend-lib = { path = "../pdfextend-lib" }

[profile.release]
lto = true