[package]
name = "pdfextend-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
# pdfium-render = { git = "https://github.com/WhiteboardCX/pdfium-render", branch = "fix-wasm-table" }
# pdfium-render = { git = "https://github.com/ajrcarey/pdfium-render", branch = "master" }
pdfium-render = "0.7.27"

