[package]
name = "pdfextend-lib"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Dorian Rudolph <mail@dorianrudolph.com>"]
description = "Implementation of PDFextend, a tool to add margins with grid lines for annotation to a PDF document."
repository = "https://github.com/DorianRudolph/pdfextend"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
# pdfium-render = "0.8.18"
pdfium-render = { git = "https://github.com/ajrcarey/pdfium-render", rev = "8409cd9bdab934dd3da76526c54f4791a03a55f2" }

[profile.release]
lto = true
