[package]
name = "pdfextend-web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Dorian Rudolph <mail@dorianrudolph.com>"]
description = "WASM interface for PDFextend, a tool to add margins with grid lines for annotation to a PDF document."
repository = "https://github.com/DorianRudolph/pdfextend"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdfextend-lib = { path = "../pdfextend-lib" }
console_log = "0.2.0"
log = "0.4.17"
wasm-bindgen = { version = "0.2.83", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["TextDecoder", "ImageData", "Window", "Response", "Blob"] }

[profile.release]
lto = true